--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 			<div class="row name-title-company">
 				<div class="col is-6">
 					<p class="text-name">Nancy Swetha</p>
-					<p class="text-title-company">Client Executive</p>
+					<p class="text-title-company">Delivery Manager – Recruitment </p>
 					<p class="text-title-company">ITCAN PTE LIMITED</p>
 					<p class="text-title-company">Singapore	*	Malaysia	*	HKG	*	Australia
 				</div>
